--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,5 +1,13 @@
-@import url('https://fonts.googleapis.com/css?family=Noto+Sans&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap");
+//Map
+$font-weights:(
+    regular: 400,
+    bold: 700
+);
+//extend
+%text{
+	text-transform: uppercase;
+}
 body {
 	background: rgb(19, 19, 19);
 	color: #fff;
@@ -41,9 +49,9 @@ body {
 }
 .navbar-dark {
 	.navbar-brand {
+		@extend %text;
 		color: #fff;
 		font-size: 25px;
-		text-transform: uppercase;
 		font-weight: bolder;
 		letter-spacing: 2px;
 	}
@@ -55,7 +63,7 @@ body {
 		}
 		.nav-link {
 			font-weight: bold;
-			text-transform: uppercase;
+			@extend %text;
 			color: #fff;
 		}
 	}
@@ -115,7 +123,7 @@ li {
 	h3 {
 		margin-top: 0;
 		margin-bottom: 12px;
-		text-transform: uppercase;
+		@extend %text;
 		font-weight: bold;
 		font-size: 16px;
 	}
@@ -161,7 +169,7 @@ li {
 }
 .copyright {
 	font-weight: bold;
-	text-transform: uppercase;
+	@extend %text;
 	text-align: center;
 	padding-top: 30px;
 	font-size: 15px;
@@ -171,12 +179,12 @@ h5 {
 	font-size: 30px;
 }
 p {
-	font-size: 25px;
+	font-size: 20px;
 }
 .card-body {
 	a {
 		font-size: 25px;
-		text-transform: uppercase;
+		@extend %text;
 	}
 }
 .container {
@@ -185,12 +193,12 @@ p {
 .title {
 	h1 {
 		text-align: center;
-		text-transform: uppercase;
+		@extend %text;
 	}
 	p {
 		font-size: small;
 		text-align: center;
-		text-transform: uppercase;
+		@extend %text;
 	}
 }
 .shop-item {
@@ -335,5 +343,11 @@ p {
 			text-align: center;
 			margin-top: 20px;
 		}
+	}
+}
+.slide {
+	img{
+		max-height: 100%;
+		max-width: 100%;
 	}
 }
