--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,4 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap");
+* {
+	margin: 0;
+}
 //Map
 $font-weights:(
     regular: 400,
@@ -50,10 +53,16 @@ body {
 .gallery {
 	padding: 1rem;
 }
-* {
-	margin: 0;
-}
 .navbar-dark {
+	border: none;
+    box-shadow: none;
+    transition: background 0.7s ease-out;
+    background: transparent!important;
+    position: absolute;
+    z-index: 1030;
+    top: 0;
+    left: 0;
+    right: 0;
 	.navbar-brand {
 		@extend %text;
 		color: #fff;
@@ -126,6 +135,9 @@ li {
 	padding: 50px 0;
 	color: #f0f9ff;
 	background-color: #0c0b0b;
+	p {
+		font-size: 14px;
+	}
 	h3 {
 		margin-top: 0;
 		margin-bottom: 12px;
@@ -197,6 +209,7 @@ p {
 	padding: 2rem;
 }
 .title {
+	padding-bottom: 2rem;
 	h1 {
 		text-align: center;
 		@extend %text;
@@ -216,7 +229,7 @@ p {
 	text-align: center;
 	font-weight: bold;
 	font-size: 1.5em;
-	color: #333;
+	color: rgb(255, 255, 255);
 	margin-bottom: 15px;
 }
 .shop-item-image {
@@ -230,7 +243,7 @@ p {
 .shop-item-price {
 	font-weight: bold;
 	flex-grow: 1;
-	color: #333;
+	color: rgb(255, 255, 255);
 }
 .shop-items {
 	display: flex;
@@ -240,7 +253,7 @@ p {
 .cart-header {
 	font-weight: bold;
 	font-size: 1.25em;
-	color: #333;
+	color: rgb(255, 255, 255);
 }
 .cart-column {
 	display: flex;
@@ -265,13 +278,13 @@ p {
 .cart-price {
 	width: 20%;
 	font-size: 1.2em;
-	color: #333;
+	color: rgb(255, 255, 255);
 }
 .cart-quantity {
 	width: 35%;
 }
 .cart-item-title {
-	color: #333;
+	color: rgb(255, 255, 255);
 	margin-left: .5em;
 	font-size: 1.2em;
 }
@@ -296,7 +309,7 @@ p {
 	border-radius: 5px;
 	border: 1px solid #56CCF2;
 	background-color: #eee;
-	color: #333;
+	color: rgb(255, 255, 255);
 	padding: 0;
 	text-align: center;
 	font-size: 1.2em;
@@ -310,11 +323,11 @@ p {
 .cart-total-title {
 	font-weight: bold;
 	font-size: 1.5em;
-	color: black;
+	color: rgb(255, 255, 255);
 	margin-right: 20px;
 }
 .cart-total-price {
-	color: #333;
+	color: rgb(255, 255, 255);
 	font-size: 1.1em;
 }
 .btn-purchase {
