--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap");
+* {
+  margin: 0;
+}
+
 h2 .contact, .navbar-dark .navbar-brand, .navbar-dark .navbar-nav .nav-link, .footer-dark h3, .copyright, .card-body a, .title h1, .title p {
   text-transform: uppercase;
 }
@@ -63,8 +67,18 @@ body {
   padding: 1rem;
 }
 
-* {
-  margin: 0;
+.navbar-dark {
+  border: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  -webkit-transition: background 0.7s ease-out;
+  transition: background 0.7s ease-out;
+  background: transparent !important;
+  position: absolute;
+  z-index: 1030;
+  top: 0;
+  left: 0;
+  right: 0;
 }
 
 .navbar-dark .navbar-brand {
@@ -134,6 +148,10 @@ li a:hover {
   padding: 50px 0;
   color: #f0f9ff;
   background-color: #0c0b0b;
+}
+
+.footer-dark p {
+  font-size: 14px;
 }
 
 .footer-dark h3 {
@@ -214,6 +232,10 @@ p {
   padding: 2rem;
 }
 
+.title {
+  padding-bottom: 2rem;
+}
+
 .title h1 {
   text-align: center;
 }
@@ -233,7 +255,7 @@ p {
   text-align: center;
   font-weight: bold;
   font-size: 1.5em;
-  color: #333;
+  color: white;
   margin-bottom: 15px;
 }
 
@@ -256,7 +278,7 @@ p {
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
-  color: #333;
+  color: white;
 }
 
 .shop-items {
@@ -272,7 +294,7 @@ p {
 .cart-header {
   font-weight: bold;
   font-size: 1.25em;
-  color: #333;
+  color: white;
 }
 
 .cart-column {
@@ -309,7 +331,7 @@ p {
 .cart-price {
   width: 20%;
   font-size: 1.2em;
-  color: #333;
+  color: white;
 }
 
 .cart-quantity {
@@ -317,7 +339,7 @@ p {
 }
 
 .cart-item-title {
-  color: #333;
+  color: white;
   margin-left: .5em;
   font-size: 1.2em;
 }
@@ -346,7 +368,7 @@ p {
   border-radius: 5px;
   border: 1px solid #56CCF2;
   background-color: #eee;
-  color: #333;
+  color: white;
   padding: 0;
   text-align: center;
   font-size: 1.2em;
@@ -362,12 +384,12 @@ p {
 .cart-total-title {
   font-weight: bold;
   font-size: 1.5em;
-  color: black;
+  color: white;
   margin-right: 20px;
 }
 
 .cart-total-price {
-  color: #333;
+  color: white;
   font-size: 1.1em;
 }
 
