--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap");
+@import 'navbar';
+@import 'footer';
 * {
 	margin: 0;
 }
@@ -53,74 +55,6 @@ body {
 .gallery {
 	padding: 1rem;
 }
-.navbar-dark {
-	border: none;
-    box-shadow: none;
-    transition: background 0.7s ease-out;
-    background: transparent!important;
-    position: absolute;
-    z-index: 1030;
-    top: 0;
-    left: 0;
-    right: 0;
-	.navbar-brand {
-		@extend %text;
-		color: #fff;
-		font-size: 25px;
-		font-weight: bolder;
-		letter-spacing: 2px;
-	}
-	.navbar-nav {
-		.active {
-			>.nav-link {
-				color: #fff;
-			}
-		}
-		.nav-link {
-			font-weight: bold;
-			@extend %text;
-			color: #fff;
-		}
-	}
-}
-.navbar-light {
-	.navbar-nav {
-		.nav-link.active {
-			color: #fff;
-		}
-		.nav-link.show {
-			color: #fff;
-		}
-		.show {
-			>.nav-link {
-				color: #fff;
-			}
-		}
-		.nav-link {
-			&:focus {
-				color: #fff;
-			}
-			&:hover {
-				color: #fff;
-			}
-		}
-	}
-}
-.navbar-toggler {
-	background: #fff;
-	padding: 1px 5px;
-	font-size: 18px;
-	line-height: 0.3;
-}
-.nav-link {
-	padding: .2rem 1rem;
-	&:focus {
-		color: #fff;
-	}
-}
-.nav-link.active {
-	color: #fff;
-}
 li {
 	a {
 		&:hover {
@@ -128,77 +62,7 @@ li {
 		}
 	}
 }
-.footerText {
-	font-family: 'Times New Roman', Times, serif;
-}
-.footer-dark {
-	padding: 50px 0;
-	color: #f0f9ff;
-	background-color: #0c0b0b;
-	p {
-		font-size: 14px;
-	}
-	h3 {
-		margin-top: 0;
-		margin-bottom: 12px;
-		@extend %text;
-		font-weight: bold;
-		font-size: 16px;
-	}
-	ul {
-		padding: 0;
-		list-style: none;
-		line-height: 1.6;
-		font-size: 14px;
-		margin-bottom: 0;
-		a {
-			color: inherit;
-			text-decoration: none;
-			opacity: 0.6;
-			&:hover {
-				opacity: 0.8;
-			}
-		}
-	}
-	.item.text {
-		margin-bottom: 36px;
-		p {
-			color: #fff;
-			opacity: 0.6;
-			margin-bottom: 0;
-		}
-	}
-	.item.social {
-		text-align: center;
-		>a {
-			font-size: 20px;
-			width: 36px;
-			height: 36px;
-			line-height: 36px;
-			display: inline-block;
-			text-align: center;
-			border-radius: 50%;
-			box-shadow: 0 0 0 1px rgb(255, 255, 255);
-			margin: 0 8px;
-			color: white;
-			opacity: 0.75;
-		}
-	}
-}
-.copyright {
-	font-weight: bold;
-	@extend %text;
-	text-align: center;
-	padding-top: 30px;
-	font-size: 15px;
-	margin-bottom: 0;
-}
-h5 {
-	font-size: 30px;
-}
-p {
-	font-size: 20px;
-}
+
 .card-body {
 	a {
 		font-size: 25px;
@@ -343,30 +207,92 @@ p {
 		grid-column: span 2 / auto;
 	}
 }
-@media (max-width:767px) {
-	.footer-dark {
-		.item {
-			&:not(.social) {
-				text-align: center;
-				padding-bottom: 20px;
-			}
-		}
-		.item.text {
-			margin-bottom: 0;
-		}
-	}
-}
-@media (max-width:990px) {
-	.footer-dark {
-		.item.social {
-			text-align: center;
-			margin-top: 20px;
-		}
-	}
-}
+
 .slide {
 	img{
 		max-height: 100%;
 		max-width: 100%;
 	}
+}
+// Tarjetas de testimonio utilizando mixin
+@mixin tarjetas {
+	box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
+	overflow: hidden;
+	border-radius: 15px;
+	margin-bottom: 2rem;
+	:hover{
+		border-color: darkcyan;
+		transition: .7s;
+	}
+}
+.img1 img{
+	height: 200px;
+	border-top-right-radius: 15px;
+	border-top-left-radius: 15px;
+	width: 100%;
+	height: 300px;
+	object-fit: cover;
+	object-position: bottom;
+}
+.img2 img{
+	position: relative;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	z-index: 1;
+	width: 140px;
+	height: 200px;
+	object-fit: cover;
+	object-position: bottom;
+	border-radius: 50%;
+	border: 7px solid #fff;
+	margin-top: -80px;
+}
+.tarjeta-1{
+	@include tarjetas();
+}
+.tarjeta-2{
+	@include tarjetas();
+}
+.tarjeta-3{
+	@include tarjetas();
+}
+.tarjeta-4{
+	@include tarjetas();
+}
+.tarjeta-5{
+	@include tarjetas();
+}
+.tarjeta-6{
+	@include tarjetas();
+}
+.tarjeta-7{
+	@include tarjetas();
+}
+.tarjeta-8{
+	@include tarjetas();
+}
+.tarjeta-9{
+	@include tarjetas();
+}
+.testimonio{
+	padding: 80px 0;
+}
+.texto-main{
+	padding: 30px 0;
+	text-align: center;
+	h2{
+		text-transform: uppercase;
+		font-weight: 900;
+		font-size: 20px;
+		margin: 0 0 20px;
+	}
+		p{
+			font-size: 16px;
+			padding: 0 35px;
+		}
+	}
+.h2 {
+	text-align: center;
+	text-transform: uppercase;
 }
