--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,73 +1,52 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap');
 @import '_navbar';
 @import '_footer';
-* {
+@import '_header';
+@import '_store';
+@import '_testimonio';
+@import '_contactos';
+@import '_sucursales';
+@import '_about';
+
+html, body {
 	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	max-width: 100%;
+    overflow-x: hidden;
+	scroll-behavior: smooth;
+	background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(../assets/cake1.jpeg) ;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	font-family: 'Quicksand', sans-serif;
 }
+
+* {	
+	text-decoration: none;
+	outline: none;
+	border: none;
+	transition: all .2s linear;
+  }
 $font-weights:(
     regular: 400,
     bold: 700
 );
-.material-icons{
-	color: rgb(255, 255, 255);
-	border: none;
-	font-size: 20px;
-	&:hover {
-		cursor: pointer;
-	}
-	&:focus {
-		outline: none;
-	}
-}
+
 %text{
 	text-transform: uppercase;
 }
-h2{
-	color: white;
-	.contact{
-		@extend %text;
-		text-align: center;
-	}
+.btn{
+    margin-top: 1rem;
+    display: inline-block;
+    font-size: 1.7rem;
+    color:#ffffff;
+    background: #5c4b49;
+    border-radius: .5rem;
+    cursor: pointer;
+    padding:.8rem 3rem;
 }
-body {
-	background-image: url(https://cdn.pixabay.com/photo/2022/03/28/04/26/black-and-white-7096518_960_720.jpg);
-	background-repeat: no-repeat;
-	background-size: 100%;
-	background-attachment: fixed;
-	font-family: 'Noto Sans', sans-serif;
-}
-.card {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	background: #161616;
-	font-size: 3rem;
-	color: #fff;
-	box-shadow: rgba(3, 8, 20, 0.1) 0px 0.15rem 0.5rem, rgba(2, 8, 20, 0.1) 0px 0.075rem 0.175rem;
-	height: 100%;
-	width: 100%;
-	border-radius: 4px;
-	transition: all 500ms;
-	overflow: hidden;
-	background-size: cover;
-	background-position: center;
-	background-repeat: no-repeat;
-	&:hover {
-		box-shadow: rgba(2, 8, 20, 0.1) 0px 0.35em 1.175em, rgba(2, 8, 20, 0.08) 0px 0.175em 0.5em;
-		transform: translateY(-3px) scale(1.1);
-	}
-}
-.photo-grid {
-	margin-top: 15rem;
-	display: grid;
-	gap: 1rem;
-	grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-	grid-auto-rows: 240px;
-}
-.gallery {
-	padding: 1rem;
-}
+
 li {
 	a {
 		&:hover {
@@ -99,233 +78,8 @@ li {
 		@extend %text;
 	}
 }
-img {
-	width: 100%;
-	margin-bottom: 10px;
-}
-h2 {
-	color: rgb(255, 255, 255);
-	text-transform: uppercase;
-	font-weight: 500;
-	font-size: 40px;
-	text-align: center;
-}
-.seleccion {
-	text-align: center;
-}
-#selecTalles {
-	width: 50%;
-}
-#boton-carrito {
-	border: none;
-	color: rgb(255, 255, 255);
-	font-size: 30px;
-	background-color: rgb(0, 0, 0);
-	border-radius: 15%;
-	transition: all .3s;
-	&:hover {
-		cursor: grab;
-	}
-	&:focus {
-		outline: none;
-	}
-}
-.carro-container {
-	padding-top: 10rem;
-}
-#contadorCarrito {
-	margin-bottom: 35px;
-}
-#contenedor-productos {
-	font-family: sans-serif;
-	font-weight: bold;
-	text-align: center;
-	max-width: 1200px;
-	margin: 60px auto;
-	display: flex;
-	justify-content: space-between;
-	flex-wrap: wrap;
-}
-p {
-	color: white;
-	line-height: 1.8;
-}
 
-.producto {
-	background-color: rgba(185, 182, 182, 0.3);
-	max-width: 30%;
-	padding: 10px;
-	margin-bottom: 20px;
-	box-shadow: 2px 6px 3px 3px rgba(185, 182, 182, 0.3);
-}
-select {
-	display: inline;
-	text-align: center;
-	border: 1px solid lightskyblue;
-}
-.modal-contenedor {
-	position: fixed;
-	top: 0;
-	width: 100%;
-	height: 100vh;
-	background-color: rgba(0, 0, 0, 0.3);
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	transition: all .5s;
-	opacity: 0;
-	visibility: hidden;
-}
-.modal-active {
-	opacity: 1;
-	visibility: visible;
-	z-index: 5;
-	.modal-carrito {
-		margin-top: 0;
-	}
-}
-.modal-carrito {
-	position: relative;
-	background-color: rgb(92, 92, 92);
-	min-width: 500px;
-	padding: 20px;
-	margin-top: -100%;
-	transition: all .5s;
-	h3 {
-		color: rgb(0, 0, 0);
-		padding-bottom: 5px;
-	}
-	#carritoCerrar {
-		position: absolute;
-		top: 15px;
-		right: 15px;
-		font-size: 20px;
-		color: rgb(0, 0, 0);
-		border: none;
-		background-color: rgb(92, 92, 92);
-		&:hover {
-			cursor: pointer;
-		}
-		&:focus {
-			outline: none;
-		}
-	}
-	.precioProducto {
-		padding-top: 10px;
-	}
-}
-.funcionalidad-carro{
-	padding-left: 40px;
-}
-.card-producto {
-	.card-image {
-		.card-title {
-			color: rgb(255, 255, 255);
-			position: unset;
-		}
-	}
-}
-.productoEnCarrito {
-	border-left: 5px solid lightblue;
-	border-bottom-left-radius: 3px;
-	border-top-left-radius: 3px;
-	margin: 5px 0;
-	padding: 5px 10px;
-	display: flex;
-	justify-content: space-between;
-	&:hover {
-		border-left: 5px solid rgb(0, 0, 0);
-	}
-}
-.boton-eliminar {
-	background-color:rgb(92, 92, 92);
-	color: rgb(0, 0, 0);
-	border: none;
-	font-size: 20px;
-	&:hover {
-		cursor: pointer;
-	}
-	&:focus {
-		outline: none;
-	}
-}
-#carrito-icon {
-	font-size: 60px;
-	padding-top: 4rem;
-}
-@media screen and (min-width: 600px) {
-	.card-tall {
-		grid-row: span 2 / auto;
-	}
-	.card-wide {
-		grid-column: span 2 / auto;
-	}
-}
-.slide {
-	img{
-		margin-bottom: 0rem;
-		max-height: 100%;
-		max-width: 100%;
-	}
-}
-// Tarjetas de testimonio utilizando mixin
-@mixin tarjetas {
-	box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
-	overflow: hidden;
-	border-radius: 15px;
-	:hover{
-		border-color: darkcyan;
-		transition: .7s;
-	}
-}
-.img1 img{
-	height: 200px;
-	border-top-right-radius: 15px;
-	border-top-left-radius: 15px;
-	width: 100%;
-	height: 300px;
-	object-fit: cover;
-	object-position: bottom;
-}
-.img2 img{
-	position: relative;
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	z-index: 1;
-	width: 140px;
-	height: 200px;
-	object-fit: cover;
-	object-position: bottom;
-	border-radius: 50%;
-	border: 7px solid #fff;
-	margin-top: -80px;
-}
-.tarjeta-testimonio{
-	@include tarjetas();
-}
-.testimonio{
-	margin-top: 5rem;
-	padding: 80px 0;
-}
-.texto-main{
-	padding: 30px 0;
-	text-align: center;
-	h2{	
-		text-transform: uppercase;
-		font-weight: 900;
-		font-size: 20px;
-		margin: 0 0 20px;
-	}
-	p{
-		font-size: 16px;
-		padding: 0 35px;
-	}
-}
-.h2 {
-	text-align: center;
-	text-transform: uppercase;
-}
-.contact {
-	padding-top: 15px;
-}
+
+
+
+
